tests/ui/member_staged.stderr
Error [E0311]: `upper` isn't a method on this value
  --> tests/ui/member_staged.jet:3:13
    |
  3 |     print(s.upper());
    |             ^^^^^
 Why: only struct and enum values have instance methods
 Fix: check the spelling of `upper`
